[package]
name = "minecraft_banners"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
anyhow = "1.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1", features = ["query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = "0.1"
tokio = { version = "1.47.1", features = ["full"] }
mcb = { path = "mcb" }
mimalloc = "0.1.48"

[workspace]
members = ["mcb"]

[profile.release]
codegen-units = 1
lto = "fat"
