[package]
name = "mcb"
description = "Handles banner operations like adding patterns and properly overlaying them."
version = "0.1.0"
edition = "2024"

[dependencies]
strum = { version = "0.27.2", features = ["derive"] }
image = "0.25.6"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = "2"
